fix: fix profile__about alignment

--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -19,12 +19,12 @@
   width: 100%;
   max-height: 77px;
   color: #fff;
-  display: flex;
-  gap: 18px;
 }
 
-.profile__personal-text {
-  max-width: 375px;
+.profile__personal-title {
+  max-width: 420px;
+  display: flex;
+  gap: 18px;
 }
 
 .profile__name {
@@ -45,8 +45,9 @@
 }
 
 .profile__edit-button {
-  width: 24px;
+  max-width: 24px;
   height: 24px;
+  width: 100%;
   border: 1px solid #fff;
   background-color: #000;
   display: flex;
@@ -87,8 +88,8 @@
 }
 
 @media screen and (max-width: 850px) {
-  .profile__personal-text {
-    max-width: 284px;
+  .profile__personal-title {
+    max-width: 320px;
   }
 
   .profile__name {
@@ -102,7 +103,7 @@
 }
 
 @media screen and (max-width: 671px) {
-  .profile__personal-text {
+  .profile__personal-title {
     max-width: 284px;
   }
 
@@ -125,12 +126,13 @@
 
   .profile__personal-information {
     margin: 30px 0 0;
-    justify-content: center;
-  }
-
-  .profile__personal-text {
     display: flex;
     flex-direction: column;
+    align-items: center;
+  }
+
+  .profile__personal-title {
+    display: flex;
     align-items: center;
     max-width: 100%;
   }
@@ -143,6 +145,11 @@
   .profile__about {
     font-size: 18px;
     line-height: 21.78px;
+  }
+
+  .profile__edit-button {
+    margin: 0;
+    width: 24px;
   }
 
   .profile__add-button {
